# Ladrilhos-Dalle

./: .gitignore  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requeriments.txt
CRM/: create_instance.py  db.sqlite3
CRM/CRM/: settings.py  urls.py
CRM/accounts/: urls.py  views.py
CRM/accounts/templates/: login.html  register.html
CRM/cadastro/: Agente.py  admin.py  agente_analise.py  forms.py  models.py  views.py  webhook.py
CRM/cadastro/Templates/: Analise.html  Atendimento.html  Workspace.html
CRM/cadastro/migrations/: 0001_initial.py  0002_etapas.py  0003_contatos.py  0004_rename_contatos_canais.py  0005_lead_mensagem.py  0006_workspace_agente_ativo.py  0007_workspace_agente_instrucoes.py  0008_workspace_agente_nome.py  0009_documentoconhecimento.py  0010_lead_finalizado.py  0011_alter_canais_numero.py
CRM/cadastro/templates/: Dashboard.html  agente.html  canais.html
CRM/chroma_db/: chroma.sqlite3
desing systems/Conseito do CRM/: desing_system.html  index.html
desing systems/Conseito do CRM/assets/: 05bd72951b3c4f37_solar.json  2cd72fa735662a42_solar.json  4f14de062455416c_shared_code.json  5661f0719ae43e75_solar.json  99362eec4436c954_shared_code.json  9eb4c3682a43cc59_shared_code.json  App.js  DesignSystemPromptPopoverContent-BOMIlLm9.js  a6be86cf348499d1_solar.json  base-80a1f760-CglprID8.js  c604b4be3d95234d_public_author_profiles.json  consoleHook-59e792cb-DzlCu4WZ.js  d12728c695d9fa3b_css2.css  d463278c9581226d_solar.json  da9e6e1c650d79b3_css2.css  e938590154cd1540_solar.json  efc21c2319a4dd55_solar.json  index-2EMPRjLg.js  (+4 more)
